#137076 (part 3) Use information icon instead of error